--- a/src/sw/SmartHome.ioc
+++ b/src/sw/SmartHome.ioc
@@ -28,7 +28,7 @@ PB5.GPIOParameters=GPIO_Label
 SH.GPXTI13.0=GPIO_EXTI13
 Mcu.IP4=TIM3
 RCC.FCLKCortexFreq_Value=180000000
-Mcu.IP5=TIM13
+Mcu.IP5=TIM12
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
@@ -41,7 +41,7 @@ Mcu.ThirdPartyNb=0
 RCC.SDIOFreq_Value=180000000
 SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=180000000
-Mcu.IPNb=8
+Mcu.IPNb=9
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=180000000
@@ -71,11 +71,13 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA8.Locked=true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+TIM12.Period=999
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=2000000
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 PA14.Mode=Serial_Wire
 TIM3.Prescaler=1800-1
 File.Version=6
@@ -83,6 +85,7 @@ PH1-OSC_OUT.Locked=true
 PB3.GPIOParameters=GPIO_Label
 PA8.Signal=GPIO_Output
 RCC.PLLRCLKFreq_Value=180000000
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB6.GPIOParameters=GPIO_Label
@@ -122,7 +125,7 @@ PB3.GPIO_Label=TP_IRQ
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 ProjectManager.ProjectFileName=SmartHome.ioc
 PA7.Mode=Full_Duplex_Master
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
@@ -153,6 +156,8 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PB10.Signal=GPIO_Output
 TIM13.IPParameters=Period,Prescaler
 RCC.VCOI2SOutputFreq_Value=192000000
+TIM12.Prescaler=179
+PB14.Signal=S_TIM12_CH1
 PA5.Signal=SPI1_SCK
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 RCC.PLLSAIPCLKFreq_Value=96000000
@@ -160,6 +165,8 @@ board=NUCLEO-F446RE
 RCC.VCOOutputFreq_Value=360000000
 TIM13.Period=9999
 ProjectManager.LastFirmware=true
+SH.S_TIM12_CH1.ConfNb=1
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
 RCC.APB2Freq_Value=90000000
 MxCube.Version=6.2.1
@@ -167,6 +174,7 @@ TIM13.Prescaler=17999
 RCC.PLLI2SPCLKFreq_Value=96000000
 SPI1.Mode=SPI_MODE_MASTER
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=84000000
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
@@ -184,17 +192,20 @@ TIM14.Prescaler=179
 PA2.Signal=USART2_TX
 PA13.GPIO_Label=TMS
 ProjectManager.UnderRoot=true
-Mcu.IP6=TIM14
+Mcu.IP8=USART2
+Mcu.IP6=TIM13
 RCC.VCOSAIInputFreq_Value=1000000
-Mcu.IP7=USART2
+Mcu.IP7=TIM14
 ProjectManager.CoupleFile=true
 RCC.48MHZClocksFreq_Value=84000000
 PB3.Signal=GPIO_Input
 RCC.SYSCLKFreq_VALUE=180000000
 PB5.Signal=GPIO_Output
-Mcu.Pin20=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
 PA3.Locked=true
-Mcu.Pin21=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM12_VS_ClockSourceINT
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -204,27 +215,28 @@ PA13.Locked=true
 ProjectManager.CompilerOptimize=6
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA14
+Mcu.Pin15=PA13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PB3
-Mcu.Pin13=PA9
-Mcu.Pin14=PA13
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin16=PA14
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin19=PB6
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB5
+Mcu.Pin17=PB3
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PB6
+Mcu.Pin18=PB5
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-Mcu.Pin11=PC7
+Mcu.Pin11=PB14
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-Mcu.Pin12=PA8
+Mcu.Pin12=PC7
 RCC.PLLM=8
 RCC.PLLN=180
 Mcu.Pin10=PB10
 PA2.Mode=Asynchronous
 RCC.PWRFreq_Value=180000000
 RCC.APB1Freq_Value=45000000
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
