--- a/src/sw/SmartHome.ioc
+++ b/src/sw/SmartHome.ioc
@@ -9,16 +9,18 @@ RCC.CortexFreq_Value=180000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F446RETx
 SPI1.VirtualType=VM_MASTER
+TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 RCC.PLLCLKFreq_Value=180000000
 PA14.GPIO_Label=TCK
 RCC.PLLQCLKFreq_Value=180000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM13_Init-TIM13-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM13_Init-TIM13-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_TIM12_Init-TIM12-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
 PA3.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=LCD_CS
 RCC.PLLI2SRCLKFreq_Value=96000000
 PC13.GPIO_Label=B1 [Blue PushButton]
+PB15.Signal=S_TIM12_CH2
 RCC.SAIAFreq_Value=96000000
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
@@ -73,6 +75,7 @@ PA8.Locked=true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 TIM12.Period=999
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+SH.S_TIM12_CH2.ConfNb=1
 MxDb.Version=DB.6.0.21
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -104,6 +107,7 @@ PA2.GPIO_Label=USART_TX
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
+SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 PB5.GPIO_Label=TP_CS
 RCC.CECFreq_Value=32786.88524590164
@@ -125,7 +129,7 @@ PB3.GPIO_Label=TP_IRQ
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 ProjectManager.ProjectFileName=SmartHome.ioc
 PA7.Mode=Full_Duplex_Master
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
@@ -191,6 +195,7 @@ RCC.RTCHSEDivFreq_Value=4000000
 TIM14.Prescaler=179
 PA2.Signal=USART2_TX
 PA13.GPIO_Label=TMS
+Mcu.Pin24=VP_TIM14_VS_ClockSourceINT
 ProjectManager.UnderRoot=true
 Mcu.IP8=USART2
 Mcu.IP6=TIM13
@@ -201,11 +206,11 @@ RCC.48MHZClocksFreq_Value=84000000
 PB3.Signal=GPIO_Input
 RCC.SYSCLKFreq_VALUE=180000000
 PB5.Signal=GPIO_Output
-Mcu.Pin22=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin20=PB6
 PA3.Locked=true
-Mcu.Pin21=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin21=VP_SYS_VS_Systick
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -215,28 +220,28 @@ PA13.Locked=true
 ProjectManager.CompilerOptimize=6
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA13
+Mcu.Pin15=PA9
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA14
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin19=PB6
+Mcu.Pin16=PA13
+Mcu.Pin13=PC7
+Mcu.Pin14=PA8
+Mcu.Pin19=PB5
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB3
+Mcu.Pin17=PA14
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PB5
+Mcu.Pin18=PB3
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 Mcu.Pin11=PB14
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-Mcu.Pin12=PC7
+Mcu.Pin12=PB15
 RCC.PLLM=8
 RCC.PLLN=180
 Mcu.Pin10=PB10
 PA2.Mode=Asynchronous
 RCC.PWRFreq_Value=180000000
 RCC.APB1Freq_Value=45000000
-TIM12.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler,Channel-PWM Generation2 CH2
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
